--- a/BlazorProject.Client/Pages/Pokemons/MovesList/PokemonMove.razor
+++ b/BlazorProject.Client/Pages/Pokemons/MovesList/PokemonMove.razor
@@ -1,5 +1,4 @@
 ﻿@using BlazorProject.Shared.DTO
-@using System.Linq.Expressions
 @inject HttpClient Http
 
 <h2 class="mb-3">Moves</h2>
@@ -8,7 +7,7 @@
         <div class="row">
             @foreach (var groupList in FirstHalf)
             {
-                <MovesList List=@groupList OrderBy=@SubGroupsOrderKey[groupList.Key] />
+                <MovesList List=@groupList OrderBy=@SubGroupsOrderKey[groupList.Key]/>
             }
         </div>
     </div>
@@ -16,7 +15,7 @@
         <div class="row">
             @foreach (var groupList in SecondHalf)
             {
-                <MovesList List=@groupList OrderBy=@SubGroupsOrderKey[groupList.Key] />
+                <MovesList List=@groupList OrderBy=@SubGroupsOrderKey[groupList.Key]/>
             }
         </div>
     </div>
@@ -24,31 +23,35 @@
 
 
 @code {
-[Parameter]
-IEnumerable<PokemonMoves> PokemonMovesList { get; set; }
-IEnumerable<IGrouping<string, PokemonMoves>> FirstHalf { get; set; }
-IEnumerable<IGrouping<string, PokemonMoves>> SecondHalf { get; set; }
-private Dictionary<string,Func<PokemonMoves, object>> SubGroupsOrderKey { get; set; }
 
-protected override void OnInit()
-{
-    SubGroupsOrderKey = new Dictionary<string, Func<PokemonMoves, object>>
+    [Parameter]
+    static IEnumerable<PokemonMoves> PokemonMovesList => null;
+
+    IEnumerable<IGrouping<string, PokemonMoves>> FirstHalf { get; set; }
+    IEnumerable<IGrouping<string, PokemonMoves>> SecondHalf { get; set; }
+    private Dictionary<string, Func<PokemonMoves, object>> SubGroupsOrderKey { get; set; }
+
+    protected override void OnInit()
+    {
+        SubGroupsOrderKey = new Dictionary<string, Func<PokemonMoves, object>>
         {
-            {"level-up", p => p.Level },
-            {"egg", p => p.Name },
-            {"machine",p => p.TmMachineNumber },
-            {"tutor",p => p.Name }
+            {"level-up", p => p.Level},
+            {"egg", p => p.Name},
+            {"machine", p => p.TmMachineNumber},
+            {"tutor", p => p.Name}
         };
-}
-protected override void OnParametersSet()
-{
-    var subGroups = PokemonMovesList
-      .GroupBy(p => p.LearnMethods)
-      .OrderBy(s => new List<string> { "level-up", "egg", "machine", "tutor" }.IndexOf(s.Key));
+    }
 
-    var halfArraySize = subGroups.ToList().Count / 2;
-    FirstHalf = subGroups.Take(halfArraySize);
-    SecondHalf = subGroups.Skip(halfArraySize);
-}
-}
+    protected override void OnParametersSet()
+    {
+        var subGroups = PokemonMovesList
+            .GroupBy(p => p.LearnMethods)
+            .OrderBy(s => new List<string> {"level-up", "egg", "machine", "tutor"}
+                .IndexOf(s.Key)).ToList();
 
+        var halfArraySize = subGroups.Count / 2;
+        FirstHalf = subGroups.Take(halfArraySize);
+        SecondHalf = subGroups.Skip(halfArraySize);
+    }
+
+}
