--- a/BlazorProject.Client/Pages/Pokemons/Pokedex.razor
+++ b/BlazorProject.Client/Pages/Pokemons/Pokedex.razor
@@ -1,49 +1,48 @@
 ﻿@page "/pokedex"
 @using BlazorProject.Shared.DTO;
 @using BlazorProject.Shared;
-@using Shared.Utils;
 @inject IUriHelper UriHelper
 @inject HttpClient Http
 <h2 class="text-center">National Pokédex</h2>
 @foreach (var gen in Pokemons.GroupBy(p => p.Generation))
 {
-    <h2>@(Format(gen.Key))</h2>
+    <h2>@Format(gen.Key)</h2>
     @foreach (var row in gen.DivideList(8))
-    {
-        <div class="row justify-content-center text-center align-items-center mb-3">
-            @foreach (var pokemon in row)
-            {
-                <div class="col">
-                    <PokemonImage PokemonId=@pokemon.Id PokemonName=@pokemon.Name IsSmall=true Gen=@pokemon.Generation Types=@pokemon.Types />
-                </div>
-            }
-        </div>
-    }
-    <br />
+     {
+         <div class="row justify-content-center text-center align-items-center mb-3">
+             @foreach (var pokemon in row)
+             {
+                 <div class="col">
+                     <PokemonImage PokemonId=@pokemon.Id PokemonName=@pokemon.Name IsSmall=true Gen=@pokemon.Generation Types=@pokemon.Types/>
+                 </div>
+             }
+         </div>
+     }
+    <br/>
 }
 
 
 @code {
-    [Parameter]
-    private ICollection<PokemonList>
-    Pokemons { get; set; } = new List<PokemonList>
-        ();
 
-        protected async override Task OnInitAsync()
-        {
-        Pokemons = await Http.GetJsonAsync<List<PokemonList>>($"api/Pokemons");
-    }
-    private string Format(string gen)
+    [Parameter]
+    private ICollection<PokemonList> Pokemons { get; set; } = new List<PokemonList>();
+
+    protected override async Task OnInitAsync()
     {
-        string formattedString = "";
+        Pokemons = await Http.GetJsonAsync<List<PokemonList>>("api/Pokemons");
+    }
+
+    private static string Format(string gen)
+    {
+        var formattedString = "";
 
         var splitString = gen
-                       .Replace("-", " ")
-                       .Split(' ');
+            .Replace("-", " ")
+            .Split(' ');
         splitString
             .ToList()
             .ForEach(word => formattedString += word == splitString.First() ? word.FirstCharToUpper() + " " : word.ToUpper() + " ");
         return formattedString;
     }
-}
 
+}
