--- a/BlazorProject.Client/Pages/Pokemons/Pokemons.razor
+++ b/BlazorProject.Client/Pages/Pokemons/Pokemons.razor
@@ -1,58 +1,61 @@
 ﻿@page "/pokemon/{Id:int}"
 @using BlazorProject.Shared.DTO
-@using BlazorProject.Client.Pages.Pokemons.Stats
-@using BlazorProject.Client.Pages.Pokemons.MovesList
 @inject HttpClient Http
-@inherits RealmComponent<State>
+@inherits RealmComponent<BlazorProject.Client.Redux.State>
 
 @if (Pokemon != null)
 {
     <div class="row align-items-center mb-3">
         <div class="col-xl-4 col-lg-8">
-            <PokemonImage PokemonId=@Pokemon.Id />
+            <PokemonImage PokemonId=@Pokemon.Id/>
         </div>
         <div class="col-xl-8 col-lg-12">
-            <PokemonData Pokemon=@Pokemon />
+            <PokemonData Pokemon=@Pokemon/>
         </div>
     </div>
 
     <div class="row mb-3 justify-content-center">
         <div class="col-xl-6 col-lg-6 col-md-12">
-            <PokemonStatsComponent Stats=@Pokemon.Stats MaxStats=@MaxStats />
+            <PokemonStatsComponent Stats=@Pokemon.Stats MaxStats=@MaxStats/>
         </div>
         <div class="col-xl-6 col-lg-6 col-md-10">
-            <TypeDefenses TypeEfficacies=@Pokemon.Efficacies />
+            <TypeDefenses TypeEfficacies=@Pokemon.Efficacies/>
         </div>
     </div>
 
     <div class="row mb-3">
         <div class="col">
-            <EvolutionChain PokemonId=@Pokemon.Id />
+            <EvolutionChain PokemonId=@Pokemon.Id/>
         </div>
     </div>
     @if (Pokemon.Id == Id)
-    {
-        <div class="row mb-3">
-            <div class="col">
-                <PokemonMove PokemonMovesList=@Pokemon.Moves />
-            </div>
-        </div>
-    }
+     {
+         <div class="row mb-3">
+             <div class="col">
+                 <PokemonMove PokemonMovesList=@Pokemon.Moves/>
+             </div>
+         </div>
+     }
 }
 
 @code {
+
     [Parameter]
     public FullPokemon Pokemon { get; set; }
+
     [Parameter]
     public int Id { get; set; }
+
     private PokemonStats MaxStats { get; set; }
+
     protected override async Task OnInitAsync()
     {
         MaxStats = await Http.GetJsonAsync<PokemonStats>("api/Pokemons/maxStats");
     }
-    protected async override Task OnParametersSetAsync()
+
+    protected override async Task OnParametersSetAsync()
     {
         Pokemon = await Http.GetJsonAsync<FullPokemon>($"api/Pokemons/{Id}");
     }
-}
 
+}
